--- a/index.ipynb
+++ b/index.ipynb
@@ -2066,16 +2066,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "203"
+       "630"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2084,7 +2084,7 @@
     "area_values = None\n",
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "cities[0]['Area']=203\n",
-    "#cities[1]['Area']=\n",
+    "cities[1]['Area']=63\n",
     "#cities[2]['Area']=\n"
    ]
   },
