--- a/index.ipynb
+++ b/index.ipynb
@@ -2066,16 +2066,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-16-2df22796965b>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-2df22796965b>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    cities[2]['Area']=\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "230"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2083,7 +2085,7 @@
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "cities[0]['Area']=203\n",
     "cities[1]['Area']=630\n",
-    "cities[2]['Area']=\n"
+    "cities[2]['Area']=23\n"
    ]
   },
   {
