Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2074,7 +2074,8 @@
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "cities[0]['Area']=203\n",
     "cities[1]['Area']=630\n",
-    "cities[2]['Area']=230\n"
+    "cities[2]['Area']=230\n",
+    "\n"
    ]
   },
   {
