Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2066,11 +2066,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_values = y_values\n",
+    "area_values = None\n",
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "cities[0]['Area']=203\n",
     "cities[1]['Area']=630\n",
