--- a/index.ipynb
+++ b/index.ipynb
@@ -2092,6 +2092,10 @@
     "cities[1]['City']='Toronto'\n",
     "cities[2]['City']= 'Marakesh'\n",
     "\n",
+    "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
+    "cities[0]['Area']=203\n",
+    "cities[1]['Area']=630\n",
+    "cities[2]['Area']=230\n",
     "\n",
     "\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}\n",
