Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2070,7 +2070,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_values = y_values\n",
+    "area_values = _values\n",
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "cities[0]['Area']=203\n",
     "cities[1]['Area']=630\n",
