Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2092,7 +2092,10 @@
     "cities[1]['City']='Toronto'\n",
     "cities[2]['City']= 'Marakesh'\n",
     "\n",
-    "\n",
+    "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
+    "cities[0]['Population']=2891\n",
+    "cities[1]['Population']=2732\n",
+    "cities[2]['Population']=559\n",
     "\n",
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "cities[0]['Area']=203\n",
