Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2075,7 +2075,8 @@
     "cities[0]['Area']=203\n",
     "cities[1]['Area']=630\n",
     "cities[2]['Area']=230\n",
-    "\n"
+    "\n",
+    "bar_trace_first_three_areas"
    ]
   },
   {
