Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2071,6 +2071,12 @@
    "outputs": [],
    "source": [
     "area_values = []\n",
+    "text_values = ['Buenos Aires','Toronto','Marakesh']\n",
+    "\n",
+    "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
+    "cities[0]['City']='Buenos Aires'\n",
+    "cities[1]['City']='Toronto'\n",
+    "cities[2]['City']= 'Marakesh'\n",
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "cities[0]['Area']=203\n",
     "cities[1]['Area']=630\n",
