--- a/index.ipynb
+++ b/index.ipynb
@@ -2083,7 +2083,7 @@
     "cities[1]['Area']=630\n",
     "cities[2]['Area']=230\n",
     "\n",
-    "bar_trace_first_three_areas"
+    "bar_trace_first_three_areas={'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
   {
