Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2070,7 +2070,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_values = 'area'\n",
+    "area_values = 'Area'\n",
     "text_values = ['Buenos Aires','Toronto','Marakesh']\n",
     "\n",
     "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
