--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2070,7 +2070,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_values = \n",
+    "area_values = 'Area'\n",
     "text_values = ['Buenos Aires','Toronto','Marakesh']\n",
     "\n",
     "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
@@ -2083,7 +2083,7 @@
     "cities[1]['Area']=630\n",
     "cities[2]['Area']=230\n",
     "\n",
-    "bar_trace_first_three_areas={'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
+    "bar_trace_first_three_areas={'type': 'bar', 'x': x_values, 'y': y_values, 'Area': text_values}"
    ]
   },
   {
